# traffic-light_nfc_s3

./: ADDITIONAL_FIXES_REPORT.md  BUGFIX_SUMMARY.md  CMakeLists.txt  CODE_QUALITY_REPORT.md  COMPLETE_BUGFIX_REPORT.md  FINAL_COMPLETION_REPORT.md  FULL_PROJECT_INSPECTION_REPORT.md  MODULE_DEPENDENCIES.md  PROJECT_ANALYSIS.md  UNIT_SWITCH_MECHANISM.md  WEB_CONFIG_UPDATE_REPORT.md  WEB_FRONTEND_UPDATE_REPORT.md  WEB_UNIT_SWITCH_REPORT.md  WORKFLOW_ANALYSIS.md  build_log.txt  partitions.csv  sdkconfig  sdkconfig.defaults
.cache/clangd/index/: app.c.0E07C42D18BB8415.idx  app.h.929EE8A879961934.idx  app_config.c.2F19E708DC49215D.idx  app_config.h.C7F843580523DC95.idx  (+84 more)
.claude/plans/: fix_design_issues.md  radar_refactor.md
build_codex/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_app_args  flasher_args.json  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_codex/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  project_description.json
build_codex/config/: kconfig_menus.json  sdkconfig.h  sdkconfig.json
build_codex/esp-idf/: cmake_install.cmake
build_codex/gdbinit/: gdbinit  symbols
build_codex/log/: idf_py_stdout_output_12  idf_py_stdout_output_228  idf_py_stdout_output_6  idf_py_stdout_output_7  idf_py_stdout_output_8
docs/: bringup_success_params_2026-04-29.md  config_json.md  new_pcb_pin_map.md
docs/config_templates/: CONFIG.JSN  CONFIG_MIN.JSN  NFC_RULES_EXAMPLE.JSN  RADAR_ONLY_EXAMPLE.JSN  README.md  动作表.md  字段说明.md  现场使用步骤.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: app.h  app_config.h  board_hal.h  modem_4g.h  net_eth.h  nfc_pn532.h  ota_update.h  peripheral_test.h  pin_map.h  radar_input.h  rtc_rx8025t.h  storage_sd.h  time_sync.h  time_utils.h  web_config.h
main/src/: app.c  app_config.c  board_hal.c  modem_4g.c  net_eth.c  nfc_pn532.c  ota_update.c  peripheral_test.c  radar_input.c  rtc_rx8025t.c  storage_sd.c  time_sync.c  web_config.c
main/src/web/: web_config.c
main/src/web/www/: app.js  index.html  login.html  login.js  style.css
(+77 files in other folders)
