idf_component_register(
    SRCS
        "main.c"
        "src/app.c"
        "src/app_config.c"
        "src/board_hal.c"
        "src/modem_4g.c"
        "src/nfc_pn532.c"
        "src/net_eth.c"
        "src/ota_update.c"
        "src/peripheral_test.c"
        "src/radar_input.c"
        "src/rtc_rx8025t.c"
        "src/storage_sd.c"
        "src/time_sync.c"
        "src/web/web_config.c"
    INCLUDE_DIRS
        "include"
    EMBED_TXTFILES
        "src/web/www/index.html"
        "src/web/www/login.html"
        "src/web/www/style.css"
        "src/web/www/app.js"
        "src/web/www/login.js"
    REQUIRES
        nvs_flash
        esp_event
        esp_netif
        esp_wifi
        esp_http_server
        esp_http_client
        esp_https_ota
        app_update
        esp-tls
        json
        esp_eth
        driver
        fatfs
        lwip
        sdmmc
        i2cdev
        pcf8574
        iot_usbh_cdc
        iot_usbh_modem
        modem_at
)
